[package]
name = "expected-value"
version = "0.1.0"
authors = ["PanSzczerba <26200369+PanSzczerba@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.0"
num_cpus = "1.0"
